feat: added closing event on form in js

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -54,7 +54,9 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <button class="closeBtn">
+            <span class="close"></span>
+          </button>
           <div class="modal-body">
             <form
               name="reserve"
