fix: validerConditions: fixed the comportment of the function + feat: at submit, clean all formData

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -84,7 +84,7 @@
               </div>
               <div
                 class="formData"
-                data-error="Veuillez entrer une adreese mail valide (format: *@*.*)"
+                data-error="Veuillez entrer une adresse mail valide (format: *@*.*)"
                 data-error-visible="false"
               >
                 <label for="email">E-mail</label><br />
@@ -126,14 +126,15 @@
                   max="99"
                 />
               </div>
-              <p class="text-label">
-                A quel tournoi souhaitez-vous participer cette année ?
-              </p>
+
               <div
                 class="formData"
                 data-error="Veuillez choisir une option"
                 data-error-visible="false"
               >
+                <p class="text-label">
+                  A quel tournoi souhaitez-vous participer cette année ?
+                </p>
                 <input
                   class="checkbox-input"
                   type="radio"
