feat: added validation message and clos modal on submit button

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -223,6 +223,7 @@
               </div>
               <input
                 class="btn-submit"
+                id="btnSubmit"
                 type="submit"
                 class="button"
                 value="C'est parti"
